# esp32s3-smartwatch-espidf

./: .gitignore  CMakeLists.txt  README.md  autorun.sh  decode_crash.sh  lv_conf.h  platformio.ini  sdkconfig.defaults
boards/: waveshare_esp32_s3_lcd_1_69.json
docs/: ESP32-S3-Touch-LCD-1.69-hardware-reference.md
include/: espidf_arduino_compat.h
include/api/: buzzer.h  geocode.h  gyroscope.h  prefs.h  weather_api.h
include/context/: app_context.h  (+2 more)
partitions/: partitions.csv
src/: CMakeLists.txt  main.cpp
src/api/: buzzer.cpp  geocode.cpp  gyroscope.cpp  prefs.cpp  weather_api.cpp
src/assets/: fa_weather_24.c
src/context/: app_context.cpp  app_settings.cpp  display_controller.cpp
src/core/boot/: boot.cpp
src/core/display/: cst_816_drv.cpp  lcd_169_drv.cpp
src/core/memory/: memory_manager.cpp
src/core/network/: console_init.cpp  napt_interface.cpp  time_init.cpp  wifi_init.cpp
src/core/power/: power_mgmt.cpp
src/core/store/: nvs_fs.cpp
src/network/modules/: bluetooth_scanner.cpp  heartbeat_sensor.cpp  open_scanner.cpp  wifi_scanner.cpp
src/network/utility/: wifi_tools.cpp
src/ui/components/: heartbeat_radar_widget.cpp  keyboard_helpers.cpp  nice_button.cpp  time_formatting.cpp  toast.cpp  ui_helpers.cpp
src/ui/dialogs/: bluetooth_dialog.cpp  opentime_dialog.cpp  scan_dialog.cpp
src/ui/screens/: heartbeat_sensor_page.cpp  home_page.cpp  settings_page.cpp
src/ui/screens/components/settings/: api_group.cpp  display_group.cpp  network_group.cpp  power_group.cpp  sensors_group.cpp  system_group.cpp  time_group.cpp
src/util/: util.cpp
(+35 files in other folders)
